evaluator/sources/1102060436.error
/eval-folder/1102060436.cpp: In function 'int main()':
/eval-folder/1102060436.cpp:6:1: error: expected ';' before '}' token
 }
 ^
